force-app/main/default/objects/TestCase__c/TestCase__c.object-meta.xml
<CustomObject>
    <description>The test case and steps to test the work.</description>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>