force-app/main/default/objects/TestCase__c/fields/ExpectedResults__c.field-meta.xml
<CustomField>
    <fullName>ExpectedResults__c</fullName>
    <inlineHelpText>What is the outcome of this test?</inlineHelpText>
    <label>Expected Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>