force-app/main/default/objects/TestCase__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes about test case</description>
    <inlineHelpText>Notes about test case</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>