force-app/main/default/objects/TestCase__c/fields/Preconditions__c.field-meta.xml
<CustomField>
    <fullName>Preconditions__c</fullName>
    <inlineHelpText>What criteria must be met before this test case can be executed.</inlineHelpText>
    <label>Preconditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>