force-app/main/default/objects/TestCase__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <description>Test description including functionality to test and steps to take</description>
    <inlineHelpText>Test description including functionality to test and steps to take</inlineHelpText>
    <label>Test Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>