force-app/main/default/objects/TestCase__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <description>Work being tested</description>
    <inlineHelpText>Work being tested</inlineHelpText>
    <label>Work</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>TestCases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>